--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,8 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    pass"
+    "    rsss = {}\n",
+    "    "
    ]
   },
   {
