Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,8 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    rsss = {''}\n",
+    "    rsss = {'m_values': m_values}\n",
+    "    \n",
     "    "
    ]
   },
