--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,8 @@
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
     "    rsss = {'m_values': m_values}\n",
-    "    \n",
+    "    for m in m_values:\n",
+    "        residual_sum_squares(x_values, y_values, m, b)\n",
     "    "
    ]
   },
