--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,7 @@
     "    rss = []\n",
     "    for m in m_values:\n",
     "        rss.append(residual_sum_squares(x_values, y_values, m, b))\n",
-    "    rsss.update()\n",
+    "    rsss.update({rss_values''})\n",
     "        "
    ]
   },
