--- a/index.ipynb
+++ b/index.ipynb
@@ -636,7 +636,7 @@
     "from error import residual_sum_squares\n",
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
-    "    m*learningslope_at(budgets, revenues, m, 133.33333333333326) "
+    "    m*learning_rate*current_slopedgets, revenues, m, 133.33333333333326) "
    ]
   },
   {
