--- a/index.ipynb
+++ b/index.ipynb
@@ -629,14 +629,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "from error import residual_sum_squares\n",
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
-    "    return m*learning_rate*current_slope "
+    "    return m*0.1*learning_rate*current_slope "
    ]
   },
   {
@@ -648,16 +648,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.08002134466684593"
+       "0.008002134466684595"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
