--- a/index.ipynb
+++ b/index.ipynb
@@ -636,7 +636,7 @@
     "from error import residual_sum_squares\n",
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
-    "    return -0.1*learning_rate*current_slope "
+    "    return learning_rate*current_slope "
    ]
   },
   {
