Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -629,14 +629,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "from error import residual_sum_squares\n",
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
-    "    return learning_rate*current_slope "
+    "    return learning_rate*current_slope + m"
    ]
   },
   {
@@ -648,16 +648,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.008002134466684595"
+       "1.4936476666667913"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
