--- a/index.ipynb
+++ b/index.ipynb
@@ -692,7 +692,9 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
-    "    for i in list(range(0, step)"
+    "    descents = \n",
+    "    for i in list(range(0, step)):\n",
+    "        "
    ]
   },
   {
