--- a/index.ipynb
+++ b/index.ipynb
@@ -694,7 +694,7 @@
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    descents = []\n",
     "    for i in list(range(0, step)):\n",
-    "        descents.append({})"
+    "        descents.append({'m': m, 'rss': 368964.16669999994, 'slope': -548316.9999998063})"
    ]
   },
   {
