--- a/index.ipynb
+++ b/index.ipynb
@@ -696,7 +696,7 @@
     "    m = current_m\n",
     "    for i in list(range(0, step)):\n",
     "        descents.append({'m': m, 'rss': residual_sum_squares(x_values, y_values, m, b), 'slope': slope_at(budgets, revenues, m, b)})\n",
-    "        "
+    "        m = updated_m(m, learning_rate, cost_curve_slope)"
    ]
   },
   {
