Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -695,7 +695,7 @@
     "    descents = []\n",
     "    m = current_m\n",
     "    for i in list(range(0, step)):\n",
-    "        descents.append({'m': m, 'rss': residual_sum_squares(x_values, y_values, m, b), 'slope': slope_at(budgets, revenues, m, b)[]})\n",
+    "        descents.append({'m': m, 'rss': residual_sum_squares(x_values, y_values, m, b), 'slope': slope_at(budgets, revenues, m, b)['slope']})\n",
     "        m = updated_m(m, learning_rate, cost_curve_slope)"
    ]
   },
