Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,14 +695,14 @@
     "    descents = []\n",
     "    m = current_m\n",
     "    for i in list(range(0, steps)):\n",
-    "        descents.append({'m': m, 'rss': residual_sum_squares(x_values, y_values, m, b), 'slope': slope_at(budgets, revenues, m, b)['slope']})\n",
-    "        m = updated_m(m, learning_rate, slope_at(x_values, revenues, m, b)['slope'])\n",
+    "        descents.append({'m': m, 'rss': residual_sum_squares(x_values, y_values, m, b), 'slope': slope_at(x_values, y_values, m, b)['slope']})\n",
+    "        m = updated_m(m, learning_rate, slope_at(x_values, y_values, m, b)['slope'])\n",
     "    return descents"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +744,7 @@
        "  'slope': -805409.2199995648}]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
