--- a/index.ipynb
+++ b/index.ipynb
@@ -694,10 +694,10 @@
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    descents = []\n",
     "    m=[]\n",
-    "    m[-] = current_m\n",
+    "    m[0] = current_m\n",
     "    for i in list(range(0, steps)):\n",
     "        descents.append({'m': m, 'rss': residual_sum_squares(x_values, y_values, m, b), 'slope': slope_at(x_values, y_values, m, b)['slope']})\n",
-    "        m = updated_m(m, learning_rate, slope_at(x_values, y_values, m, b)['slope'])\n",
+    "        m[] = updated_m(m, learning_rate, slope_at(x_values, y_values, m, b)['slope'])\n",
     "    return descents"
    ]
   },
