--- a/index.ipynb
+++ b/index.ipynb
@@ -696,7 +696,7 @@
     "    m=[]\n",
     "    m[0] = current_m\n",
     "    for i in list(range(0, steps)):\n",
-    "        descents.append({'m': m[i], 'rss': residual_sum_squares(x_values, y_values, m, b), 'slope': slope_at(x_values, y_values, m, b)['slope']})\n",
+    "        descents.append({'m': m[i], 'rss': residual_sum_squares(x_values, y_values, m[i], b), 'slope': slope_at(x_values, y_values, m, b)['slope']})\n",
     "        m[] = updated_m(m, learning_rate, slope_at(x_values, y_values, m, b)['slope'])\n",
     "    return descents"
    ]
