--- a/index.ipynb
+++ b/index.ipynb
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,8 +696,8 @@
     "    m=[]\n",
     "    m[0] = current_m\n",
     "    for i in list(range(0, steps)):\n",
-    "        descents.append({'m': m[i], 'rss': residual_sum_squares(x_values, y_values, m[i], b), 'slope': slope_at(x_values, y_values, m, b)['slope']})\n",
-    "        m[] = updated_m(m, learning_rate, slope_at(x_values, y_values, m, b)['slope'])\n",
+    "        descents.append({'m': m[i], 'rss': residual_sum_squares(x_values, y_values, m[i], b), 'slope': slope_at(x_values, y_values, m[i], b)['slope']})\n",
+    "        m[i+1] = updated_m(m, learning_rate, slope_at(x_values, y_values, m, b)['slope'])\n",
     "    return descents"
    ]
   },
