--- a/index.ipynb
+++ b/index.ipynb
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,57 +697,26 @@
     "    m[0] = current_m\n",
     "    for i in list(range(0, steps)):\n",
     "        descents.append({'m': m[i], 'rss': residual_sum_squares(x_values, y_values, m[i], b), 'slope': slope_at(x_values, y_values, m[i], b)['slope']})\n",
-    "        m[i+1] = updated_m(m, learning_rate, slope_at(x_values, y_values, m, b)['slope'])\n",
+    "        m[i+1] = updated_m(m, learning_rate, slope_at(x_values, y_values, m[i], b)['slope'])\n",
     "    return descents"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'m': 0, 'rss': 368964.16669999994, 'slope': -548316.9999998063},\n",
-       " {'m': -0.055647666666791336,\n",
-       "  'rss': 400128.1961338812,\n",
-       "  'slope': -571689.0200000489},\n",
-       " {'m': -0.11129533333358267,\n",
-       "  'rss': 432592.82394605497,\n",
-       "  'slope': -595061.0399997095},\n",
-       " {'m': -0.16694300000037401,\n",
-       "  'rss': 466358.0501365212,\n",
-       "  'slope': -618433.05999937},\n",
-       " {'m': -0.22259066666716534,\n",
-       "  'rss': 501423.87470527994,\n",
-       "  'slope': -641805.0799990306},\n",
-       " {'m': -0.2782383333339567,\n",
-       "  'rss': 537790.2976523313,\n",
-       "  'slope': -665177.1000004373},\n",
-       " {'m': -0.33388600000074803,\n",
-       "  'rss': 575457.318977675,\n",
-       "  'slope': -688549.1200000979},\n",
-       " {'m': -0.38953366666753936,\n",
-       "  'rss': 614424.9386813112,\n",
-       "  'slope': -711921.1399997585},\n",
-       " {'m': -0.4451813333343307,\n",
-       "  'rss': 654693.15676324,\n",
-       "  'slope': -735293.1600005832},\n",
-       " {'m': -0.5008290000011221,\n",
-       "  'rss': 696261.9732234612,\n",
-       "  'slope': -758665.1800002437},\n",
-       " {'m': -0.5564766666679134,\n",
-       "  'rss': 739131.3880619749,\n",
-       "  'slope': -782037.1999999043},\n",
-       " {'m': -0.6121243333347047,\n",
-       "  'rss': 783301.4012787811,\n",
-       "  'slope': -805409.2199995648}]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndexError",
+     "evalue": "list assignment index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-38-14c83c609b0f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdescent_steps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgradient_descent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbudgets\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrevenues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m12\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m133.33\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m.000001\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcurrent_m\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdescent_steps\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# [{'m': 0, 'rss': 368964.16669999994, 'slope': -548316.9999998063},\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#  {'m': 0.5483169999998062, 'rss': 131437.9413767516, 'slope': -318023.86000024853},\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-37-2978a52455fb>\u001b[0m in \u001b[0;36mgradient_descent\u001b[0;34m(x_values, y_values, steps, b, learning_rate, current_m)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mdescents\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mm\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mm\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcurrent_m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msteps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mdescents\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'm'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rss'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mresidual_sum_squares\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'slope'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mslope_at\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'slope'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list assignment index out of range"
+     ]
     }
    ],
    "source": [
