--- a/index.ipynb
+++ b/index.ipynb
@@ -687,14 +687,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-41-c0295a8a4b40>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-41-c0295a8a4b40>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    m[ = current_m\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    descents = []\n",
     "    m=[]\n",
-    "    m[0] = current_m\n",
+    "    m[ = current_m\n",
     "    for i in list(range(0, steps)):\n",
     "        descents.append({'m': m[i], 'rss': residual_sum_squares(x_values, y_values, m[i], b), 'slope': slope_at(x_values, y_values, m[i], b)['slope']})\n",
     "        m[i+1] = updated_m(m[i], learning_rate, slope_at(x_values, y_values, m[i], b)['slope'])\n",
