Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -696,6 +696,7 @@
     "    descents = []\n",
     "    m = current_m\n",
     "    for i in list(range(0, steps)):\n",
+    "        slope = \n",
     "        descents.append({'m': m, 'rss': residual_sum_squares(x_values, y_values, m, b), 'slope': slope_at(x_values, y_values, m, b)['slope']})\n",
     "        m = updated_m(m, learning_rate, slope_at(x_values, y_values, m, b)['slope'])\n",
     "    return descents"
