--- a/index.ipynb
+++ b/index.ipynb
@@ -697,8 +697,8 @@
     "    m = current_m\n",
     "    for i in list(range(0, steps)):\n",
     "        slope = slope_at(x_values, y_values, m, b)['slope']\n",
-    "        rss = \n",
-    "        descents.append({'m': m, 'rss': residual_sum_squares(x_values, y_values, m, b), 'slope': slope})\n",
+    "        rss = residual_sum_squares(x_values, y_values, m, b)\n",
+    "        descents.append({'m': m, 'rss': rss, 'slope': slope})\n",
     "        m = updated_m(m, learning_rate, slope)\n",
     "    return descents"
    ]
