--- a/index.ipynb
+++ b/index.ipynb
@@ -648,16 +648,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8663310000004829"
+       "1.0507942000003276"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,8 +672,8 @@
     "# 1.43803233333338\n",
     "\n",
     "current_slope = slope_at(budgets, revenues, 0.86634, 133.33)['slope']\n",
-    "updated_m(0.866, .000001, current_slope)\n",
-    "\n",
+    "updated_m(0.86634, .000001, current_slope)\n",
+    "current\n",
     "# 1.3823523333332086"
    ]
   },
