Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -648,16 +648,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0507942000003276"
+       "-184454.20000032755"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +673,7 @@
     "\n",
     "current_slope = slope_at(budgets, revenues, 0.86634, 133.33)['slope']\n",
     "updated_m(0.86634, .000001, current_slope)\n",
-    "current\n",
+    "current_slope\n",
     "# 1.3823523333332086"
    ]
   },
