Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,9 +697,9 @@
     "    m = current_m\n",
     "    for i in list(range(0, steps)):\n",
     "        slope = slope_at(x_values, y_values, m, b)['slope']\n",
-    "\n",
     "        rss = residual_sum_squares(x_values, y_values, m, b)\n",
     "        print (rss)\n",
+    "        print(slope)\n",
     "        descents.append({'m': m, 'rss': rss, 'slope': slope})\n",
     "        m = updated_m(m, learning_rate, slope)\n",
     "    return descents"
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -715,17 +715,29 @@
      "output_type": "stream",
      "text": [
       "368964.16669999994\n",
+      "-548316.9999998063\n",
       "274965.8234787501\n",
+      "-470846.2359994883\n",
       "195257.28805455987\n",
+      "-393375.47199975234\n",
       "129838.56042742917\n",
+      "-315904.70799972536\n",
       "78709.64059735797\n",
+      "-238433.94399940735\n",
       "41870.52856434638\n",
+      "-160963.17999959865\n",
       "19321.22432839429\n",
+      "-83492.4159993534\n",
       "11061.727889501746\n",
+      "-6021.651999017195\n",
       "17092.03924766878\n",
+      "71449.11200102797\n",
       "37412.1584028953\n",
+      "148919.87600174616\n",
       "72022.0853551814\n",
-      "120921.82010452705\n"
+      "226390.64000206417\n",
+      "120921.82010452705\n",
+      "303861.4040025277\n"
      ]
     },
     {
@@ -767,7 +779,7 @@
        "  'slope': 303861.4040025277}]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
