--- a/index.ipynb
+++ b/index.ipynb
@@ -696,6 +696,7 @@
     "    descents = []\n",
     "    m = current_m\n",
     "    for i in list(range(0, steps)):\n",
+    "        print\n",
     "        slope = slope_at(x_values, y_values, m, b)['slope']\n",
     "        rss = residual_sum_squares(x_values, y_values, m, b)\n",
     "        descents.append({'m': m, 'rss': rss, 'slope': slope})\n",
