Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
     "    descents = []\n",
     "    m = current_m\n",
     "    for i in list(range(0, steps)):\n",
-    "        print\n",
+    "        print(m)\n",
     "        slope = slope_at(x_values, y_values, m, b)['slope']\n",
     "        rss = residual_sum_squares(x_values, y_values, m, b)\n",
     "        descents.append({'m': m, 'rss': rss, 'slope': slope})\n",
@@ -706,49 +706,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0.10698351999988517\n",
+      "0.21396703999977035\n",
+      "0.3209505599996555\n",
+      "0.4279340799995407\n",
+      "0.5349175999994259\n",
+      "0.6419011199993111\n",
+      "0.7488846399991963\n",
+      "0.8558681599990815\n",
+      "0.9628516799989667\n",
+      "1.0698351999988518\n",
+      "1.176818719998737\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "[{'m': 0, 'rss': 368964.16669999994, 'slope': -548316.9999998063},\n",
-       " {'m': 0.18445420000032753,\n",
-       "  'rss': 274965.8234787501,\n",
-       "  'slope': -470846.2359994883},\n",
-       " {'m': 0.36890840000065506,\n",
-       "  'rss': 195257.28805455987,\n",
-       "  'slope': -393375.47199975234},\n",
-       " {'m': 0.5533626000009826,\n",
-       "  'rss': 129838.56042742917,\n",
-       "  'slope': -315904.70799972536},\n",
-       " {'m': 0.7378168000013101,\n",
-       "  'rss': 78709.64059735797,\n",
-       "  'slope': -238433.94399940735},\n",
-       " {'m': 0.9222710000016376,\n",
-       "  'rss': 41870.52856434638,\n",
-       "  'slope': -160963.17999959865},\n",
-       " {'m': 1.1067252000019652,\n",
-       "  'rss': 19321.22432839429,\n",
-       "  'slope': -83492.4159993534},\n",
-       " {'m': 1.2911794000022927,\n",
-       "  'rss': 11061.727889501746,\n",
-       "  'slope': -6021.651999017195},\n",
-       " {'m': 1.4756336000026202,\n",
-       "  'rss': 17092.03924766878,\n",
-       "  'slope': 71449.11200102797},\n",
-       " {'m': 1.6600878000029478,\n",
-       "  'rss': 37412.1584028953,\n",
-       "  'slope': 148919.87600174616},\n",
-       " {'m': 1.8445420000032753,\n",
-       "  'rss': 72022.0853551814,\n",
-       "  'slope': 226390.64000206417},\n",
-       " {'m': 2.028996200003603,\n",
-       "  'rss': 120921.82010452705,\n",
-       "  'slope': 303861.4040025277}]"
+       " {'m': 0.10698351999988517,\n",
+       "  'rss': 312704.5867561317,\n",
+       "  'slope': -503383.92159959767},\n",
+       " {'m': 0.21396703999977035,\n",
+       "  'rss': 261252.10570392117,\n",
+       "  'slope': -458450.8431996801},\n",
+       " {'m': 0.3209505599996555,\n",
+       "  'rss': 214606.72354336828,\n",
+       "  'slope': -413517.76480005356},\n",
+       " {'m': 0.4279340799995407,\n",
+       "  'rss': 172768.44027447302,\n",
+       "  'slope': -368584.68639984494},\n",
+       " {'m': 0.5349175999994259,\n",
+       "  'rss': 135737.2558972354,\n",
+       "  'slope': -323651.60799992736},\n",
+       " {'m': 0.6419011199993111,\n",
+       "  'rss': 103513.17041165543,\n",
+       "  'slope': -278718.5296001553},\n",
+       " {'m': 0.7488846399991963,\n",
+       "  'rss': 76096.18381773312,\n",
+       "  'slope': -233785.45120023773},\n",
+       " {'m': 0.8558681599990815,\n",
+       "  'rss': 53486.29611546845,\n",
+       "  'slope': -188852.3728002474},\n",
+       " {'m': 0.9628516799989667,\n",
+       "  'rss': 35683.507304861436,\n",
+       "  'slope': -143919.29440032982},\n",
+       " {'m': 1.0698351999988518,\n",
+       "  'rss': 22687.817385912076,\n",
+       "  'slope': -98986.21600037586},\n",
+       " {'m': 1.176818719998737,\n",
+       "  'rss': 14499.22635862036,\n",
+       "  'slope': -54053.137600494665}]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
