Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,12 +701,13 @@
     "        rss = residual_sum_squares(x_values, y_values, m, b)\n",
     "        descents.append({'m': m, 'rss': rss, 'slope': slope})\n",
     "        m = updated_m(m, learning_rate, slope)\n",
+    "        print(m)\n",
     "    return descents"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +715,9 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "0.10698351999988517\n"
+      "0.10698351999988517\n",
+      "0.10698351999988517\n",
+      "0.21396703999977035\n"
      ]
     },
     {
@@ -726,7 +729,7 @@
        "  'slope': -503383.92159959767}]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
