Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,6 +698,7 @@
     "    for i in list(range(0, steps-10)):\n",
     "        print(m)\n",
     "        slope = slope_at(x_values, y_values, m, b)['slope']\n",
+    "        print(slope)\n",
     "        rss = residual_sum_squares(x_values, y_values, m, b)\n",
     "        descents.append({'m': m, 'rss': rss, 'slope': slope})\n",
     "        m = updated_m(m, learning_rate, slope)\n",
@@ -706,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -714,9 +715,9 @@
      "output_type": "stream",
      "text": [
       "0\n",
+      "-548316.9999998063\n",
       "0.10698351999988517\n",
-      "0.10698351999988517\n",
-      "0.21396703999977035\n"
+      "-503383.92159959767\n"
      ]
     },
     {
@@ -728,7 +729,7 @@
        "  'slope': -503383.92159959767}]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
