Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,6 +700,7 @@
     "        slope = slope_at(x_values, y_values, m, b)['slope']\n",
     "        print(slope)\n",
     "        rss = residual_sum_squares(x_values, y_values, m, b)\n",
+    "        print(rss)\n",
     "        descents.append({'m': m, 'rss': rss, 'slope': slope})\n",
     "        m = updated_m(m, learning_rate, slope)\n",
     "    return descents"
