Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -703,7 +703,9 @@
     "        print(slope)\n",
     "        descents.append({'m': m, 'rss': rss, 'slope': slope})\n",
     "        m = updated_m(m, learning_rate, slope)\n",
-    "    return descents"
+    "    return descents\n",
+    "\n",
+    "m = 0\n"
    ]
   },
   {
