--- a/index.ipynb
+++ b/index.ipynb
@@ -705,7 +705,14 @@
     "        m = updated_m(m, learning_rate, slope)\n",
     "    return descents\n",
     "\n",
-    "m = 0\n"
+    "m = 0\n",
+    "rss = residual_sum_squares(x_values, y_values, m, b)\n",
+    "print(rss)\n",
+    "slope = slope_at(x_values, y_values, m, b)['slope']\n",
+    "print(slope)\n",
+    "descents.append({'m': m, 'rss': rss, 'slope': slope})\n",
+    "m = updated_m(m, learning_rate, slope)\n",
+    "print(m)"
    ]
   },
   {
