Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -688,17 +688,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5483169999998062\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    descents = []\n",
@@ -711,13 +703,12 @@
     "        print(slope)\n",
     "        descents.append({'m': m, 'rss': rss, 'slope': slope})\n",
     "        m = updated_m(m, learning_rate, slope)\n",
-    "    return descents\n",
-    "\n"
+    "    return descents\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +732,7 @@
        "  'slope': -318023.86000024853}]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
