Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -688,14 +688,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    descents = []\n",
     "    m = current_m\n",
-    "    for i in list(range(0, steps-10)):\n",
+    "    for i in list(range(0, steps-9)):\n",
     "        print(m)\n",
     "        rss = residual_sum_squares(x_values, y_values, m, b)\n",
     "        print(rss)\n",
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,10 @@
       "-548316.9999998063\n",
       "0.5483169999998062\n",
       "131437.9413767516\n",
-      "-318023.86000024853\n"
+      "-318023.86000024853\n",
+      "1.0966339999996124\n",
+      "20185.359698794015\n",
+      "-87730.72000032698\n"
      ]
     },
     {
@@ -729,10 +732,13 @@
        "[{'m': 0, 'rss': 368964.16669999994, 'slope': -548316.9999998063},\n",
        " {'m': 0.5483169999998062,\n",
        "  'rss': 131437.9413767516,\n",
-       "  'slope': -318023.86000024853}]"
+       "  'slope': -318023.86000024853},\n",
+       " {'m': 1.0966339999996124,\n",
+       "  'rss': 20185.359698794015,\n",
+       "  'slope': -87730.72000032698}]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
