Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -763,9 +763,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "markers",
+         "name": "data",
+         "text": [
+          "cost curve slope: -548316.9999998063",
+          "cost curve slope: -318023.86000024853",
+          "cost curve slope: -87730.72000032698"
+         ],
+         "type": "scatter",
+         "uid": "3cde1868-b140-11e9-811f-211e20037d5b",
+         "x": [
+          0,
+          0.5483169999998062,
+          1.0966339999996124
+         ],
+         "y": [
+          368964.16669999994,
+          131437.9413767516,
+          20185.359698794015
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"9d103690-6bdb-4844-afa6-f51b03c71b5b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9d103690-6bdb-4844-afa6-f51b03c71b5b\", [{\"mode\": \"markers\", \"name\": \"data\", \"text\": [\"cost curve slope: -548316.9999998063\", \"cost curve slope: -318023.86000024853\", \"cost curve slope: -87730.72000032698\"], \"x\": [0, 0.5483169999998062, 1.0966339999996124], \"y\": [368964.16669999994, 131437.9413767516, 20185.359698794015], \"type\": \"scatter\", \"uid\": \"3cec77dc-b140-11e9-811f-211e20037d5b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"9d103690-6bdb-4844-afa6-f51b03c71b5b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9d103690-6bdb-4844-afa6-f51b03c71b5b\", [{\"mode\": \"markers\", \"name\": \"data\", \"text\": [\"cost curve slope: -548316.9999998063\", \"cost curve slope: -318023.86000024853\", \"cost curve slope: -87730.72000032698\"], \"x\": [0, 0.5483169999998062, 1.0966339999996124], \"y\": [368964.16669999994, 131437.9413767516, 20185.359698794015], \"type\": \"scatter\", \"uid\": \"3cec77dc-b140-11e9-811f-211e20037d5b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "if descent_steps:\n",
     "    m_values = list(map(lambda step: step['m'],descent_steps))\n",
