Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,12 +700,17 @@
     "    print(slope)\n",
     "    descents.append({'m': current_m, 'rss': rss, 'slope': slope})\n",
     "    current_m = updated_m(current_m, learning_rate, slope)\n",
+    "    rss = residual_sum_squares(x_values, y_values, current_m, b)\n",
+    "    print(rss)\n",
+    "    slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
+    "    print(slope)\n",
+    "    descents.append({'m': current_m, 'rss': rss, 'slope': slope})\n",
     "    return descents\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -713,16 +718,21 @@
      "output_type": "stream",
      "text": [
       "368964.16669999994\n",
-      "-548316.9999998063\n"
+      "-548316.9999998063\n",
+      "131437.9413767516\n",
+      "-318023.86000024853\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'m': 0, 'rss': 368964.16669999994, 'slope': -548316.9999998063}]"
+       "[{'m': 0, 'rss': 368964.16669999994, 'slope': -548316.9999998063},\n",
+       " {'m': 0.5483169999998062,\n",
+       "  'rss': 131437.9413767516,\n",
+       "  'slope': -318023.86000024853}]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
