Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,9 @@
       "368964.16669999994\n",
       "-548316.9999998063\n",
       "131437.9413767516\n",
-      "-318023.86000024853\n"
+      "-318023.86000024853\n",
+      "20185.359698794015\n",
+      "-87730.72000032698\n"
      ]
     },
     {
@@ -735,10 +737,13 @@
        "[{'m': 0, 'rss': 368964.16669999994, 'slope': -548316.9999998063},\n",
        " {'m': 0.5483169999998062,\n",
        "  'rss': 131437.9413767516,\n",
-       "  'slope': -318023.86000024853}]"
+       "  'slope': -318023.86000024853},\n",
+       " {'m': 1.0966339999996124,\n",
+       "  'rss': 20185.359698794015,\n",
+       "  'slope': -87730.72000032698}]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
