Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +708,7 @@
     "    print(slope)\n",
     "    descents.append({'m': current_m, 'rss': rss, 'slope': slope})\n",
     "    current_m = updated_m(current_m, learning_rate, slope)\n",
-    "    \n",
+    "    print(current_m)\n",
     "    rss = residual_sum_squares(x_values, y_values, current_m, b)\n",
     "    print(rss)\n",
     "    slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
@@ -719,34 +719,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0\n",
       "368964.16669999994\n",
       "-548316.9999998063\n",
-      "131437.9413767516\n",
-      "-318023.86000024853\n",
-      "20185.359698794015\n",
-      "-87730.72000032698\n"
+      "0.3180238600002485\n",
+      "215818.82621636978\n",
+      "-414746.97879952146\n",
+      "0.636047720000497\n",
+      "105151.93945511186\n",
+      "-281176.95759952767\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "[{'m': 0, 'rss': 368964.16669999994, 'slope': -548316.9999998063},\n",
-       " {'m': 0.5483169999998062,\n",
-       "  'rss': 131437.9413767516,\n",
-       "  'slope': -318023.86000024853},\n",
-       " {'m': 1.0966339999996124,\n",
-       "  'rss': 20185.359698794015,\n",
-       "  'slope': -87730.72000032698}]"
+       " {'m': 0.3180238600002485,\n",
+       "  'rss': 215818.82621636978,\n",
+       "  'slope': -414746.97879952146},\n",
+       " {'m': 0.636047720000497,\n",
+       "  'rss': 105151.93945511186,\n",
+       "  'slope': -281176.95759952767}]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
