Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
        "1.43803233333338"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,8 +671,7 @@
     "updated_m(1.534, .000001, current_slope)\n",
     "# 1.43803233333338\n",
     "\n",
-    "#current_slope = slope_at(budgets, revenues, 0, 133.33)['slope']\n",
-    "#updated_m(0, .000001, current_slope)\n",
+    "current_slope = slope_at(budgets, revenues, 0, 133.33)['slope']updated_m(0, .000001, current_slope)\n",
     "#current_slope\n",
     "# 1.3823523333332086"
    ]
